fix post final image width on mobile

--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -46,6 +46,16 @@
 			}
 		}
 
+		&.fit-on-small-screen {
+			@include breakpoint(small) {
+				margin: 0 0 _size(element-margin) 0;
+				max-width: 100%;
+				img {
+					width: 100%;
+				}
+			}
+		}
+
 		&.featured {
 			display: block;
 			margin: 0 0 _size(section-spacing) 0;
